# xorj-landing

./: Anchor.toml  BOT_SERVICE_INTEGRATION.md  CLOUDFLARE_SECURITY_CONFIG.md  DEPLOYMENT_GUIDE.md  Dockerfile.staging  IMPLEMENTATION-SUMMARY.md  PENETRATION_TEST_ENGAGEMENT.md  README.md  SECURITY.md  SOLANA_RPC_SOLUTION.md  STAGING_CHAOS_TEST_RESULTS.json  SUPABASE_SETUP.md  TEST_PLAN_RESULTS_TECHNICAL_REPORT.md  TRADER_INTELLIGENCE_README.md  TRADE_EXECUTION_BOT_INTEGRATION.md  V1_PRODUCTION_WORKFLOW.md  compliance-report.json  debug-phantom.html  debug-trade-history.js  debug-tradeservice.js  docker-compose.production.yml  drizzle.config.ts  dump.rdb  fix_data_ingestion.py  jest.config.js  lint-final-results.txt  localhost-simulation-results.json  middleware.ts  next.config.ts  package-lock.json  package.json  phase2-validation-short.js  populate_swap_history.py  production-compliance-report.json  program-keypair.json  real-system-load-test.js  run-e2e-simulation.js  run-localhost-e2e-simulation.js  run-localhost-simulation.js  run-production-e2e.js  (+16 more)
PROJECT XORJ/: README.md
audit-package/: PROJECT_DOCUMENTATION.md  SECURITY_AUDIT_PACKAGE.md  package.json
chaos-testing/: Dockerfile  chaos-controller.js  package.json
data-ingestion-service/: database.py  helius_client.py  main.py  metrics.py  requirements.txt  secrets_manager.py  validation.py
database/: README.md  export-user-data.sql  init.sql  init.ts  schema.sql  staging-init.sql  supabase-migration.sql
deployment/: Dockerfile.production  (+3 more)
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
(+553 files in other folders)
