[package]
name = "vault"
version = "0.1.0"
description = "XORJ Vault smart contract for delegated trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
jupiter-cpi = "4.0.3"
